--- a/compose.yaml
+++ b/compose.yaml
@@ -3,15 +3,15 @@ name: "quiz_app"
 services:
   flask:
     build:
-      context: ./back-end
-      dockerfile: ./back-end/docker/dev.Dockerfile
+      context: back-end
+      dockerfile: ./docker/dev.Dockerfile
     ports:
       - 5000:5000
     container_name: "quiz_app_backend"
   react:
     build:
-      context: ./front-end
-      dockerfile: ./front-end/docker/dev.Dockerfile
+      context: front-end
+      dockerfile: ./docker/dev.Dockerfile
     ports:
       - 3000:3000
     depends_on:
